Refactor skills section: implement honeycomb layout with hexagonal design and animations; enhance project display with new entries and improved responsiveness.

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                 <section id="home" class="section active">
                     <div class="hero-container">
                         <div class="glitch-wrapper">
-                            <h2 class="glitch" data-text="AI RESEARCHER">AI RESEARCHER</h2>
-                            <h2 class="glitch sub" data-text="& ML ENGINEER">& ML ENGINEER</h2>
+                            <h2 class="glitch" data-text="DATA / ML ENGINEER">DATA / ML ENGINEER</h2>
+                            <h2 class="glitch sub" data-text="&AI RESEARCHER">&AI RESEARCHER</h2>
                         </div>
                         <div class="terminal-window">
                             <div class="term-header">
@@ -164,7 +164,7 @@
                             <div class="bio-text">
                                 <p class="typing-text">
                                     > SYSTEM ANALYSIS:<br><br>
-                                    I am a researcher exploring the frontiers of Artificial Intelligence. My core processing power is dedicated to understanding and improving Transformer architectures and Graph Neural Networks.
+                                    I am a DATA / ML ENGINEER exploring the frontiers of Artificial Intelligence. My core processing power is dedicated to understanding and improving Transformer architectures and Graph Neural Networks.
                                 </p>
                                 <p>
                                     Currently executing advanced learning algorithms at MIT Manipal. I build systems that can learn, adapt, and generate. From training Language Models from scratch to optimizing neural pathways, I am obsessed with the "Intelligence" in AI.
@@ -219,6 +219,23 @@
                             <!-- Project 3 -->
                             <div class="cyber-card">
                                 <div class="card-img">
+                                    <img src="./assets/SSMS_logo2.png" alt="Shresht Systems">
+                                    <div class="overlay"></div>
+                                </div>
+                                <div class="card-content">
+                                    <div class="card-meta">
+                                        <span class="tag">ELECTRON</span>
+                                        <span class="tag">MONGODB</span>
+                                    </div>
+                                    <h4>SSMS</h4>
+                                    <p>Desktop-based management system. Reduced paperwork by 80% with offline capabilities and seamless data sync.</p>
+                                    <a href="https://github.com/MayuraPatkar/Shresht-Systems_Management-System.git" target="_blank" class="link-btn">ACCESS_DATA ></a>
+                                </div>
+                            </div>
+
+                            <!-- Project 4 -->
+                            <div class="cyber-card">
+                                <div class="card-img">
                                     <img src="./assets/SSMS_logo.png" alt="Shresht Systems">
                                     <div class="overlay"></div>
                                 </div>
@@ -228,8 +245,42 @@
                                         <span class="tag">MONGODB</span>
                                     </div>
                                     <h4>SHRESHT SYSTEMS</h4>
-                                    <p>Desktop-based management system. Reduced paperwork by 80% with offline capabilities and seamless data sync.</p>
+                                    <p>Commercial business portfolio website for Shresht Systems.</p>
                                     <a href="https://github.com/MayuraPatkar/Shresht-Systems_Management-System.git" target="_blank" class="link-btn">ACCESS_DATA ></a>
+                                </div>
+                            </div>
+
+                            <!-- Project 5 -->
+                            <div class="cyber-card">
+                                <div class="card-img">
+                                    <img src="./assets/data-science.png" alt="RAG Service">
+                                    <div class="overlay"></div>
+                                </div>
+                                <div class="card-content">
+                                    <div class="card-meta">
+                                        <span class="tag">PYTHON</span>
+                                        <span class="tag">RAG</span>
+                                    </div>
+                                    <h4>Retrieval-Augmented Generation</h4>
+                                    <p>RAG Service - Retrieval-Augmented Generation for Web Content</p>
+                                    <a href="#" class="link-btn">ACCESS_DATA ></a>
+                                </div>
+                            </div>
+
+                            <!-- Project 6 -->
+                            <div class="cyber-card">
+                                <div class="card-img">
+                                    <img src="./assets/ai.png" alt="intelliAi">
+                                    <div class="overlay"></div>
+                                </div>
+                                <div class="card-content">
+                                    <div class="card-meta">
+                                        <span class="tag">DJANGO</span>
+                                        <span class="tag">PYTHON</span>
+                                    </div>
+                                    <h4>intelliAi</h4>
+                                    <p>AI-powered chat app with a finetuned custom Transformer model. Built with MongoDB, Django, and Python.</p>
+                                    <a href="#" class="link-btn">ACCESS_DATA ></a>
                                 </div>
                             </div>
                         </div>
@@ -243,35 +294,126 @@
                             <h3>// SKILL_MATRIX</h3>
                             <div class="dec-line"></div>
                         </div>
-                        <div class="skills-wrapper">
-                            <div class="skill-col">
+                        
+                        <div class="skills-honeycomb">
+                            <!-- Category 1: Languages -->
+                            <div class="skill-category-group">
                                 <h4><i class="fas fa-code"></i> LANGUAGES</h4>
-                                <ul class="tech-list">
-                                    <li><span>Python (Advanced)</span> <div class="lvl" style="width:95%"></div></li>
-                                    <li><span>C/C++</span> <div class="lvl" style="width:85%"></div></li>
-                                    <li><span>JavaScript</span> <div class="lvl" style="width:80%"></div></li>
-                                    <li><span>SQL</span> <div class="lvl" style="width:85%"></div></li>
-                                </ul>
+                                <div class="honeycomb-grid">
+                                    <div class="hex-item" data-level="95%">
+                                        <div class="hex-content">
+                                            <i class="fab fa-python hex-icon"></i>
+                                            <span class="hex-name">PYTHON</span>
+                                            <div class="hex-val">95%</div>
+                                        </div>
+                                        <div class="hex-border"></div>
+                                    </div>
+                                    <div class="hex-item" data-level="85%">
+                                        <div class="hex-content">
+                                            <i class="fas fa-terminal hex-icon"></i> <!-- C/C++ generic icon -->
+                                            <span class="hex-name">C / C++</span>
+                                            <div class="hex-val">85%</div>
+                                        </div>
+                                        <div class="hex-border"></div>
+                                    </div>
+                                    <div class="hex-item" data-level="80%">
+                                        <div class="hex-content">
+                                            <i class="fab fa-js hex-icon"></i>
+                                            <span class="hex-name">JS</span>
+                                            <div class="hex-val">80%</div>
+                                        </div>
+                                        <div class="hex-border"></div>
+                                    </div>
+                                    <div class="hex-item" data-level="85%">
+                                        <div class="hex-content">
+                                            <i class="fas fa-database hex-icon"></i>
+                                            <span class="hex-name">SQL</span>
+                                            <div class="hex-val">85%</div>
+                                        </div>
+                                        <div class="hex-border"></div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="skill-col">
+
+                            <!-- Category 2: Data Science -->
+                            <div class="skill-category-group">
                                 <h4><i class="fas fa-brain"></i> DATA SCIENCE & ML</h4>
-                                <ul class="tech-list">
-                                    <li><span>PyTorch / Transformers</span> <div class="lvl" style="width:90%"></div></li>
-                                    <li><span>Scikit-learn</span> <div class="lvl" style="width:85%"></div></li>
-                                    <li><span>Pandas / NumPy</span> <div class="lvl" style="width:95%"></div></li>
-                                    <li><span>Matplotlib</span> <div class="lvl" style="width:80%"></div></li>
-                                </ul>
+                                <div class="honeycomb-grid">
+                                    <div class="hex-item" data-level="90%">
+                                        <div class="hex-content">
+                                            <i class="fas fa-fire hex-icon"></i> <!-- PyTorch -->
+                                            <span class="hex-name">PYTORCH</span>
+                                            <div class="hex-val">90%</div>
+                                        </div>
+                                        <div class="hex-border"></div>
+                                    </div>
+                                    <div class="hex-item" data-level="85%">
+                                        <div class="hex-content">
+                                            <i class="fas fa-cogs hex-icon"></i>
+                                            <span class="hex-name">SCIKIT</span>
+                                            <div class="hex-val">85%</div>
+                                        </div>
+                                        <div class="hex-border"></div>
+                                    </div>
+                                    <div class="hex-item" data-level="95%">
+                                        <div class="hex-content">
+                                            <i class="fas fa-table hex-icon"></i>
+                                            <span class="hex-name">PANDAS</span>
+                                            <div class="hex-val">95%</div>
+                                        </div>
+                                        <div class="hex-border"></div>
+                                    </div>
+                                    <div class="hex-item" data-level="80%">
+                                        <div class="hex-content">
+                                            <i class="fas fa-chart-line hex-icon"></i>
+                                            <span class="hex-name">MATPLOTLIB</span>
+                                            <div class="hex-val">80%</div>
+                                        </div>
+                                        <div class="hex-border"></div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="skill-col">
+
+                            <!-- Category 3: Tools -->
+                            <div class="skill-category-group">
                                 <h4><i class="fas fa-tools"></i> FRAMEWORKS & TOOLS</h4>
-                                <ul class="tech-list">
-                                    <li><span>Node.js / Express</span> <div class="lvl" style="width:85%"></div></li>
-                                    <li><span>MongoDB</span> <div class="lvl" style="width:80%"></div></li>
-                                    <li><span>Git / GitHub</span> <div class="lvl" style="width:90%"></div></li>
-                                    <li><span>Jupyter / VS Code</span> <div class="lvl" style="width:95%"></div></li>
-                                </ul>
+                                <div class="honeycomb-grid">
+                                    <div class="hex-item" data-level="85%">
+                                        <div class="hex-content">
+                                            <i class="fab fa-node hex-icon"></i>
+                                            <span class="hex-name">NODE.JS</span>
+                                            <div class="hex-val">85%</div>
+                                        </div>
+                                        <div class="hex-border"></div>
+                                    </div>
+                                    <div class="hex-item" data-level="80%">
+                                        <div class="hex-content">
+                                            <i class="fas fa-leaf hex-icon"></i> <!-- MongoDB -->
+                                            <span class="hex-name">MONGODB</span>
+                                            <div class="hex-val">80%</div>
+                                        </div>
+                                        <div class="hex-border"></div>
+                                    </div>
+                                    <div class="hex-item" data-level="90%">
+                                        <div class="hex-content">
+                                            <i class="fab fa-git-alt hex-icon"></i>
+                                            <span class="hex-name">GIT</span>
+                                            <div class="hex-val">90%</div>
+                                        </div>
+                                        <div class="hex-border"></div>
+                                    </div>
+                                    <div class="hex-item" data-level="95%">
+                                        <div class="hex-content">
+                                            <i class="fas fa-laptop-code hex-icon"></i>
+                                            <span class="hex-name">VS CODE</span>
+                                            <div class="hex-val">95%</div>
+                                        </div>
+                                        <div class="hex-border"></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+
                     </div>
                 </section>
 
